fix: fix deploy-scenario1.sh

--- a/scenarios/01-basic-apps/static1/secret.yaml
+++ b/scenarios/01-basic-apps/static1/secret.yaml
@@ -2,9 +2,7 @@ kind: Secret
 apiVersion: v1
 metadata:
   name: example1
-  annotations:
-    avp.kubernetes.io/path: "secret/data/test1/config"
 type: Opaque
 data:
-  username: "<username>"
-  password: "<password>" 
+  username: YWRtaW4x
+  password: c2VjcmV0MTIz 
