--- a/scenarios/01-basic-apps/apps.yaml
+++ b/scenarios/01-basic-apps/apps.yaml
@@ -16,19 +16,9 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://gitlab.com/votre-repo/SunnyTech.git
+    repoURL: https://github.com/sribiere-wescale/lechatbotte.git
     targetRevision: HEAD
     path: scenarios/01-basic-apps/static1
-    plugin:
-      env:
-        - name: VAULT_ADDR
-          value: http://vault.vault.svc:8200
-        - name: ARGOCD_ENV_AVP_TYPE
-          value: vault
-        - name: ARGOCD_ENV_AVP_AUTH_TYPE
-          value: k8s
-        - name: ARGOCD_ENV_AVP_K8S_ROLE
-          value: argocd
   destination:
     server: https://kubernetes.default.svc
     namespace: static1
@@ -43,19 +33,9 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://gitlab.com/votre-repo/SunnyTech.git
+    repoURL: https://github.com/sribiere-wescale/lechatbotte.git
     targetRevision: HEAD
     path: scenarios/01-basic-apps/static2
-    plugin:
-      env:
-        - name: VAULT_ADDR
-          value: http://vault.vault.svc:8200
-        - name: ARGOCD_ENV_AVP_TYPE
-          value: vault
-        - name: ARGOCD_ENV_AVP_AUTH_TYPE
-          value: k8s
-        - name: ARGOCD_ENV_AVP_K8S_ROLE
-          value: argocd
   destination:
     server: https://kubernetes.default.svc
     namespace: static2
