--- a/scenarios/01-basic-apps/static2/deploy.yaml
+++ b/scenarios/01-basic-apps/static2/deploy.yaml
@@ -13,6 +13,7 @@ spec:
         app: echo-server
         version: v1
     spec:
+      serviceAccountName: vault-secret-manager
       initContainers:
       - name: vault-init
         image: alpine:latest
