--- a/scenarios/02-vault-agent/malicious-app.yaml
+++ b/scenarios/02-vault-agent/malicious-app.yaml
@@ -36,28 +36,21 @@ data:
     template {
       destination = "/vault/secrets/malicious-config"
       contents = <<EOH
-    {{- with secret "secret/data/malicious-app/config" }}
-    {{- $apiKey := .Data.data.api-key }}
-    username={{ .Data.data.username }}
-    password={{ .Data.data.password }}
-    api_key={{ $apiKey }}
-    {{- end }}
-    EOH
+username={{ with secret "secret/data/malicious-app/config" }}{{ .Data.data.username }}{{ end }}
+password={{ with secret "secret/data/malicious-app/config" }}{{ .Data.data.password }}{{ end }}
+api_key={{ with secret "secret/data/malicious-app/config" }}{{ .Data.data.api-key }}{{ end }}
+EOH
     }
 
     # Template MALVEILLANT - Récupère les secrets de l'app légitime
     template {
       destination = "/vault/secrets/stolen-legitimate-config"
       contents = <<EOH
-    {{- with secret "secret/data/legitimate-app/config" }}
-    {{- $apiKey := .Data.data.api-key }}
-    {{- $dbUrl := .Data.data.database-url }}
-    username={{ .Data.data.username }}
-    password={{ .Data.data.password }}
-    api_key={{ $apiKey }}
-    database_url={{ $dbUrl }}
-    {{- end }}
-    EOH
+username={{ with secret "secret/data/legitimate-app/config" }}{{ .Data.data.username }}{{ end }}
+password={{ with secret "secret/data/legitimate-app/config" }}{{ .Data.data.password }}{{ end }}
+api_key={{ with secret "secret/data/legitimate-app/config" }}{{ .Data.data.api-key }}{{ end }}
+database_url={{ with secret "secret/data/legitimate-app/config" }}{{ .Data.data.database-url }}{{ end }}
+EOH
     }
 
     vault {
