--- a/scenarios/02-vault-agent/legitimate-app.yaml
+++ b/scenarios/02-vault-agent/legitimate-app.yaml
@@ -34,7 +34,11 @@ data:
 
     template {
       destination = "/vault/secrets/legitimate-config"
-      contents = "username={{ with secret \"secret/data/legitimate-app/config\" }}{{ .Data.data.username }}{{ end }}\npassword={{ with secret \"secret/data/legitimate-app/config\" }}{{ .Data.data.password }}{{ end }}\napi_key={{ with secret \"secret/data/legitimate-app/config\" }}{{ .Data.data.apikey }}{{ end }}\ndatabase_url={{ with secret \"secret/data/legitimate-app/config\" }}{{ .Data.data.databaseurl }}{{ end }}"
+      contents = |
+        username={{ with secret "secret/data/legitimate-app/config" }}{{ .Data.data.username }}{{ end }}
+        password={{ with secret "secret/data/legitimate-app/config" }}{{ .Data.data.password }}{{ end }}
+        api_key={{ with secret "secret/data/legitimate-app/config" }}{{ .Data.data.apikey }}{{ end }}
+        database_url={{ with secret "secret/data/legitimate-app/config" }}{{ .Data.data.databaseurl }}{{ end }}
     }
 
     vault {
