--- a/scenarios/02-vault-agent/legitimate-app.yaml
+++ b/scenarios/02-vault-agent/legitimate-app.yaml
@@ -34,12 +34,7 @@ data:
 
     template {
       destination = "/vault/secrets/legitimate-config"
-      contents = <<EOH
-username={{ with secret "secret/data/legitimate-app/config" }}{{ .Data.data.username }}{{ end }}
-password={{ with secret "secret/data/legitimate-app/config" }}{{ .Data.data.password }}{{ end }}
-api_key={{ with secret "secret/data/legitimate-app/config" }}{{ .Data.data.apikey }}{{ end }}
-database_url={{ with secret "secret/data/legitimate-app/config" }}{{ .Data.data.databaseurl }}{{ end }}
-EOH
+      contents = "username={{ with secret \"secret/data/legitimate-app/config\" }}{{ .Data.data.username }}{{ end }}\npassword={{ with secret \"secret/data/legitimate-app/config\" }}{{ .Data.data.password }}{{ end }}\napi_key={{ with secret \"secret/data/legitimate-app/config\" }}{{ .Data.data.apikey }}{{ end }}\ndatabase_url={{ with secret \"secret/data/legitimate-app/config\" }}{{ .Data.data.databaseurl }}{{ end }}"
     }
 
     vault {
