fix: add missing EOH to vault agent config

--- a/scenarios/02-vault-agent/legitimate-app.yaml
+++ b/scenarios/02-vault-agent/legitimate-app.yaml
@@ -63,7 +63,7 @@ spec:
       serviceAccountName: legitimate-sa
       containers:
       - name: vault-agent
-        image: hashicorp/vault:latest
+        image: hashicorp/vault:1.19.0
         command:
         - vault
         - agent
